--- a/_talks/2025-03-05-talk-1.md
+++ b/_talks/2025-03-05-talk-1.md
@@ -2,7 +2,7 @@
 title: "coming soon"
 collection: talks
 type: "type"
-permalink: /talks/2025-03-05-talk
+permalink: /talks/2025-03-05-talk-1
 venue: "venue"
 date: 2025-03-04
 location: "Columbus, Ohio, United States"
