Update and rename SP25_1.md to 2025-03-05-title.md

--- a/_publications/2025-03-05-title.md
+++ b/_publications/2025-03-05-title.md
@@ -2,7 +2,7 @@
 title: "coming soon"
 collection: publications
 category: conferences
-permalink: /publication/SP25_1
+permalink: /publication/2025-03-05-title
 excerpt: 'This paper is about...'
 date: 2025-03
 venue: 'venue'
