Update excerpt with additional highlights for ACL 2025

--- a/_publications/2025-04-06-steering.md
+++ b/_publications/2025-04-06-steering.md
@@ -3,7 +3,7 @@ title: "Steering off course: Reliability Challenges in Steering Language Models"
 collection: publications
 category: conferences
 permalink: /publication/2025-04-06-steering
-excerpt: 'Steering methods for language models (LMs) have gained traction as lightweight alternatives to fine-tuning, enabling targeted modifications to model activations. However, prior studies primarily report results on a few models, leaving critical gaps in understanding the robustness of these methods. In this work, we systematically examine three prominent steering methods -- DoLa, function vectors, and task vectors. In contrast to the original studies, which evaluated a handful of models, we test up to 36 models belonging to 14 families with sizes ranging from 1.5B to 70B parameters. Our experiments reveal substantial variability in the effectiveness of the steering approaches, with a large number of models showing no improvement and at times degradation in steering performance. Our analysis demonstrate fundamental flaws in the assumptions underlying these methods, challenging their reliability as scalable steering solutions. **Oral (top 8%) and Panel Discussion (top 1%)**'
+excerpt: 'Steering methods for language models (LMs) have gained traction as lightweight alternatives to fine-tuning, enabling targeted modifications to model activations. However, prior studies primarily report results on a few models, leaving critical gaps in understanding the robustness of these methods. In this work, we systematically examine three prominent steering methods -- DoLa, function vectors, and task vectors. In contrast to the original studies, which evaluated a handful of models, we test up to 36 models belonging to 14 families with sizes ranging from 1.5B to 70B parameters. Our experiments reveal substantial variability in the effectiveness of the steering approaches, with a large number of models showing no improvement and at times degradation in steering performance. Our analysis demonstrate fundamental flaws in the assumptions underlying these methods, challenging their reliability as scalable steering solutions. **Oral (top 8%), Panel Discussion (top 1%), and Senior Area Chair Highlight @ ACL 2025.**'
 date: 2025-04-06
 venue: 'ACL (Association for Computational Linguistics)'
 paperurl: 'https://aclanthology.org/2025.acl-long.974/'
